# sge-native-providers

./: THIRD-PARTY-LICENSES  build.sbt
.github/workflows/: ci.yml  release.yml
native-components/: Cargo.toml
native-components/core/: Cargo.toml  build.rs
native-components/core/src/: buffer_ops.rs  etc1.rs  gdx2d.rs
native-components/freetype/: Cargo.toml
native-components/freetype/src/: lib.rs
native-components/physics/: Cargo.toml
native-components/physics/src/: lib.rs
native-components/physics3d/: Cargo.toml
native-components/physics3d/src/: lib.rs
project/: plugins.sbt
providers/pnm-provider-sge-angle/src/main/resources/: pnm-provider.json
scripts/: cross-all.sh  cross-android.sh  download-angle.sh
