# Cargo workspace — builds core, freetype, and physics as separate native libraries.
#
# Output:
#   core/     → libsge_native_ops.{a,so,dylib,dll} + libsge_audio + libglfw3
#   freetype/ → libsge_freetype.{a,so,dylib,dll}
#   physics/  → libsge_physics.{a,so,dylib,dll}

[workspace]
members = ["core", "freetype", "physics", "physics3d"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

# Snapshot builds: fast compile, correct behavior, suitable for CI verification.
# Use: cargo build --profile ci
[profile.ci]
inherits = "release"
opt-level = 1
lto = false

# Tagged release builds: fully optimized for distribution.
# Use: cargo build --release
[profile.release]
opt-level = 3
lto = "thin"
