# Cargo workspace — builds core, freetype, and physics as separate native libraries.
#
# Output:
#   core/     → libsge_native_ops.{a,so,dylib,dll} + libsge_audio + libglfw3
#   freetype/ → libsge_freetype.{a,so,dylib,dll}
#   physics/  → libsge_physics.{a,so,dylib,dll}

[workspace]
members = ["core", "freetype", "physics", "physics3d"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.lints.clippy]
# FFI-specific: inherent to C ABI libraries with no Rust callers
missing_safety_doc = "allow"
too_many_arguments = "allow"
unnecessary_cast = "allow"

# Pedantic lints worth catching
manual_range_contains = "warn"
needless_pass_by_value = "warn"
redundant_closure = "warn"

# Pedantic lints that are pure noise for FFI code
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
ptr_cast_constness = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"

# Snapshot builds: fast compile, correct behavior, suitable for CI verification.
# Use: cargo build --profile ci
[profile.ci]
inherits = "release"
opt-level = 1
lto = false

# Tagged release builds: fully optimized for distribution.
# Use: cargo build --release
[profile.release]
opt-level = 3
lto = "thin"
