[package]
name = "sge-native-ops"
version.workspace = true
edition.workspace = true
description = "ETC1 codec + buffer operations + audio + image decoding for SGE (C ABI + optional JNI for Android)"

[lib]
name = "sge_native_ops"
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "0.2"

# Image decoding (pure Rust — cross-compiles to all targets)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"], optional = true }

[build-dependencies]
cc = "1"

[features]
default = ["image_decode"]
# Image decoding via pure-Rust `image` crate (PNG, JPEG, BMP)
image_decode = ["image"]

[lints]
workspace = true
