[package]
name = "sge-native-freetype"
version.workspace = true
edition.workspace = true
description = "FreeType font rasterization bindings for SGE (C ABI)"

[lib]
name = "sge_freetype"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# FreeType bindings (vendored C source — no system dependency)
freetype = { version = "0.7", features = ["freetype-sys"] }

[lints]
workspace = true
